--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+	compile 'com.android.support:design:+'
+	compile 'com.android.support:support-v4:+'
+	compile 'com.android.support:recyclerview-v7:+'
+	compile 'com.android.support:cardview-v7:+'
+	compile 'com.android.support:appcompat-v7:+'
+	compile fileTree(dir: 'libs', include: ['*.jar'])
 }
