--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.moe.network.tasker" >
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:allowBackup="false"
+        android:icon="@drawable/wifi"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
 		android:resizeableActivity = "true">
@@ -17,6 +17,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+		<activity
+			android:windowSoftInputMode="adjustResize|stateHidden"
+			android:launchMode="singleTask"
+			android:theme="@style/FloatActivity"
+			android:name=".NewTask"/>
+		<activity
+			android:windowSoftInputMode="adjustPan|adjustResize"
+			android:launchMode="singleTask"
+			android:name=".NewTimer"
+			/>
     </application>
 
 </manifest>
