--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,8 @@ android {
 }
 
 dependencies {
-	compile 'com.android.support:design:+'
-	compile 'com.android.support:support-v4:+'
-	compile 'com.android.support:recyclerview-v7:+'
+	compile project(':core')
 	compile 'com.android.support:cardview-v7:+'
-	compile 'com.android.support:appcompat-v7:+'
+	compile 'com.squareup.okhttp3:okhttp:+'
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 }
